css/style.css
/* ... */
        
        .footer .footer-top .footer-links ul a:hover {
            color: #00bfff;
        }
        
        .footer .footer-top .footer-contact p {
            color: #ffffff;
            line-height: 26px;
        }
        
        .footer .footer-top .footer-newsletter input[type="email"] {
            padding: 6px 8px;
            width: 60%;
            border: 1px solid #ffffff;
            background: transparent;
            color: #ffffff;
        }
        
        .footer .footer-top .footer-newsletter input[type="submit"] {
            border: 0;
            width: 40%;
            padding: 6px 0;
            text-align: center;
            color: black;
            border: 1px solid #ffffff;
            background: #ffffff;
            transition: 0.3s;
            cursor: pointer;
        }
        
        .footer .footer-top .footer-newsletter input[type="submit"]:hover {
            color: #ffffff;
            background: #00bfff;
            border: 1px solid #00bfff;
            letter-spacing: .2rem;
        }
        
        .footer .footer-top .footer-newsletter p {
            color: #ffffff;
            font-size: 14px;
        }
        
        .footer .credit,
        .footer .copyright {
            text-align: center;
            padding-top: 30px;
        }
        
        @media (min-width: 768px) {
            .footer .credit {
                text-align: right;
            }
            
            .footer .copyright {
                text-align: left;
            }
        }

        .back-to-top {
            position: fixed;
            display: none;
            background-color: #00bfff;
            color: #ffffff;
            width: 45px;
            height: 45px;
            text-align: center;
            line-height: 1;
            font-size: 44px;
            right: 15px;
            bottom: 15px;
            transition: background 0.3s;
            z-index: 9;
        }
        
        .back-to-top i {
            color: #ffffff;
        }

        .back-to-top i:hover {
            color: black;
        }

        .faq{
            min-height: 70vh;
            width: 100vw;
            text-align: center;
            padding: 0 2rem;
            background: url(../images/faq.jpg);
            background-repeat: no-repeat;
            background-size: cover;
        }
        
        .faq .row{
            display: flex;
            align-items: center;
            justify-content: center;
            padding: 0 2rem;
        }
        
        .faq .row .accordion-container{
            width: 50%;
            text-align: left;
        }

        .faq .row .accordion{
            margin-left: 1rem;
            margin-right: 2rem;
        }
        
        .faq .row .accordion-container .accordion .accordion-header{
            background-color: #00bfff;
            margin: 1rem 0;
            box-shadow: .1rem .1rem .3rem rgba(0,0,0,.3);
            cursor: pointer;
            margin-left: 1rem;
            margin-right: 2rem;
        }
        
        .faq .row .accordion-container .accordion .accordion-header span{
            display: inline-block;
            text-align: center;
            height: 4rem;
            width: 5rem;
            line-height: 4rem;
            font-size: 2rem;
            background: #333;
            color: #fff;
            clip-path: polygon(0% 0%,75% 0%,100% 50%,75% 100%,0% 100%); 
        }
        
        .faq .row .accordion-container .accordion .accordion-header h3{
            display: inline;
            color: #333;
            font-weight: 400;
            padding-left: .5rem;
            font-size: 1.5rem;
        }
        
        .faq .row .accordion-container .accordion .accordion-body{
            padding: 1rem;
            color: #444;
            box-shadow: .1rem .1rem .3rem rgba(0,0,0,.3);
            background-color: #fff;
            font-size: 1.3rem;
            display: none;
            margin-left: 1rem;
            margin-right: 2rem;
        }
        
@media (max-width: 1200px){
    .faq{
        min-height: 70vh;
    }
}        
/* ... */

